--- a/styles/style.css
+++ b/styles/style.css
@@ -80,11 +80,14 @@
   margin-top: 100px;
 }
 
+.description__two-columns {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .two-columns {
   display: flex;
   justify-content: space-between;
-  width: 80%;
-  margin: 0 auto;
 }
 
 .two-columns__brief {
@@ -116,6 +119,64 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.digits_space_top-bottom {
+  margin: 100px 0;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto 20px auto;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  margin: 20px 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text_space_margin {
+  margin-bottom: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
