--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .table__cell {
@@ -177,6 +180,48 @@
 
 .table__text_space_margin {
   margin-bottom: 0;
+}
+
+.feynman {
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-color: #f2f2f2;
+}
+
+.feynman-wrapper {
+  position: relative;
+  height: 890px;
+}
+
+.feynman__title {
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 0 auto 70px auto;
+  padding-top: 100px;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
 }
 
 /* и элемента с модификатором вида ключ-значение */
