--- a/styles/style.css
+++ b/styles/style.css
@@ -1,352 +1,391 @@
 .page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+	min-width: 1100px;
+
+	/* мы ещё не умеем делать мобильную версию сайта, */
+
+	/* поэтому выше установлена минимальная ширина страницы */
+	max-width: 1600px;
+
+	/* выше установили ограничение по максимальной ширине */
+	margin: 0 auto;
+
+	/* выше для экранов больше 1600px отцентрировали весь контент */
+	font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  /* выше установили ограничения для секции */
-  position: relative;
-  display: flex;
-  background-color: #f2f2f2;
-  overflow: hidden;
+	/* выше установили ограничения для секции */
+	position: relative;
+
+	display: flex;
+	height: 100vh;
+	min-height: 600px;
+	max-height: 756px;
+
+	background-color: #f2f2f2;
 }
 
 .logo {
-  height: 32px;
-  width: 183px;
+	width: 183px;
+	height: 32px;
 }
 
 .logo_place_header {
-  position: absolute;
-  top: 30px;
-  left: 64px;
+	position: absolute;
+	top: 30px;
+	left: 64px;
+
+	background-image: url(../images/logo_place_header.svg);
 }
 
 .header__title {
-  width: 730px;
-  align-self: center;
-  margin: 0 0 0 64px;
-  line-height: 96px;
-  font-size: 102px;
-  font-weight: bold;
-  z-index: 2;
+	z-index: 2;
+
+	align-self: center;
+	max-width: 730px;
+	margin: 0 0 0 64px;
+
+	font-weight: bold;
+	font-size: 102px;
+	line-height: 96px;
 }
 
 .header__subtitle {
-  width: 388px;
-  margin: 0;
-  position: absolute;
-  bottom: 30px;
-  left: 64px;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  z-index: 2;
+	position: absolute;
+	bottom: 30px;
+	left: 64px;
+	z-index: 2;
+
+	max-width: 388px;
+	margin: 0;
+
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 25px;
 }
 
 .header__link {
-  color: #2f80ed;
-  text-decoration: none;
+	color: #2f80ed;
+	text-decoration: none;
 }
 
 .header__main-illustration {
-  height: 608px;
-  width: 765px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
+	/* width: 765px; */
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	z-index: 1;
+
+	height: 608px;
+	object-fit: cover;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
-  height: 568px;
-  width: 568px;
-  background-color: #2f80ed;
-  position: absolute;
-  top: 64px;
-  right: 0;
+	position: absolute;
+	top: 64px;
+	right: 0;
+
+	width: 568px;
+	height: 568px;
+
+	background-color: #2f80ed;
 }
 
-.description_space_top {
-  margin-top: 100px;
+.description {
+	margin-top: 100px;
 }
 
 .description__two-columns {
-  width: 80%;
-  margin: 0 auto;
+	width: 80%;
+	margin: 0 auto;
 }
 
 .two-columns {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 .two-columns__brief {
-  width: 175px;
-  margin: 0;
-  color: #2f80ed;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
+	max-width: 175px;
+	margin: 0;
+
+	color: #2f80ed;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 1.2;
 }
 
 .two-columns__main-text {
-  min-width: 784px;
-  width: 80%;
+	width: 80%;
+	min-width: 784px;
 }
 
 .two-columns__paragraph {
-  margin: 0;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
+	margin: 0;
+
+	font-weight: normal;
+	font-size: 24px;
+	line-height: 34px;
 }
 
 .two-columns__paragraph_space_margin {
-  margin: 30px 0 30px 0;
+	margin: 30px 0;
 }
 
 .two-columns__span-accent {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: bold;
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 34px;
 }
 
 .digits {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .digits_space_top-bottom {
-  margin: 100px 0;
+	margin: 100px 0;
 }
 
 .section-title {
-  width: 60%;
-  margin: 0 auto 20px auto;
-  text-align: center;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: bold;
+	width: 60%;
+	margin: 0 auto 20px;
+
+	font-weight: bold;
+	font-size: 60px;
+	line-height: 1.15;
+	text-align: center;
 }
 
 .section-subtitle {
-  width: 60%;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
+	width: 60%;
+	margin: 0 auto;
+
+	font-weight: normal;
+	font-size: 24px;
+	line-height: 34px;
+	text-align: center;
 }
 
 .table {
-  width: 1100px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 1100px;
+	margin: 0;
+	padding: 0;
+
+	list-style-type: none;
 }
 
 .table__cell {
-  width: 250px;
-  margin-top: 60px;
+	width: 250px;
+	margin-top: 60px;
 }
 
 .table__heading {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
+	margin: 0;
+
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 1.15;
 }
 
 .table__text {
-  margin: 20px 0;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
+	margin: 20px 0;
+
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 1.2;
 }
 
 .table__text_space_margin {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .feynman {
-  background-image: url(../images/feynman.png);
-  background-size: 867px 637px;
-  background-repeat: no-repeat;
-  background-position: left bottom;
-  background-color: #f2f2f2;
-}
+	position: relative;
 
-.feynman-wrapper {
-  position: relative;
-  height: 890px;
+	height: 890px;
+
+	background-color: #f2f2f2;
+	background-image: url(../images/feynman.png);
+	background-repeat: no-repeat;
+	background-position: left bottom;
+	background-size: 867px 637px;
 }
 
 .feynman__title {
-  width: 648px;
-  text-align: center;
-  line-height: 1.15;
-  font-size: 120px;
-  font-weight: bold;
-  margin: 0 auto 70px auto;
-  padding-top: 100px;
+	width: 648px;
+	margin: 0 auto 70px;
+	padding-top: 100px;
+
+	font-weight: bold;
+	font-size: 120px;
+	line-height: 1.15;
+	text-align: center;
 }
 
 .feynman__subtitle {
-  text-align: center;
-  line-height: 1.15;
-  font-size: 36px;
-  font-weight: normal;
-  margin: 0;
+	margin: 0;
+
+	font-weight: normal;
+	font-size: 36px;
+	line-height: 51px;
+	text-align: center;
 }
 
 .feynman__link {
-  position: absolute;
-  top: 50%;
-  right: 48px;
-  color: #2f80ed;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  text-decoration: none;
+	position: absolute;
+	top: 50%;
+	right: 48px;
+
+	color: #2f80ed;
+	font-weight: normal;
+	font-size: 36px;
+	line-height: 51px;
+	text-decoration: none;
 }
 
 .kaufman {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  background-color: #1f1f1f;
+	position: relative;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	overflow: hidden;
+
+	background-color: #1f1f1f;
 }
 
 .kaufman_space_top-bottom {
-  padding: 90px 0;
+	padding: 90px 0;
 }
 
 .section-title_theme_dark {
-  color: white;
-  z-index: 1;
+	z-index: 1;
+
+	color: white;
 }
 
 .section-subtitle_theme_dark {
-  color: white;
-  z-index: 1;
+	z-index: 1;
+
+	color: white;
 }
 
 .table_theme_dark {
-  z-index: 1;
+	z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+	width: 200px;
+	margin-top: 80px;
+	margin-right: 0;
+
+	color: white;
 }
 
 .table__heading_theme_dark {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .table__text_theme_dark {
-  margin: 0;
+	margin: 0;
 }
 
 .kaufman__triangle {
-  position: absolute;
-  right: -210px;
-  top: -5px;
-  width: 877px;
-  height: 877px;
+	position: absolute;
+	top: -5px;
+	right: -210px;
+
+	width: 877px;
+	height: 877px;
+
+	background-image: url(../images/kaufman-triangle.svg);
+	background-size: contain;
 }
 
 .footer {
-  min-height: 350px;
-  background-color: #1f1f1f;
-  display: flex;
-  padding: 60px 0 40px 0;
-  box-sizing: border-box;
+	display: flex;
+	box-sizing: border-box;
+	min-height: 350px;
+	padding: 60px 0 40px;
+
+	background-color: #1f1f1f;
 }
 
 .footer__columns {
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	width: 90%;
+	margin: 0 auto;
 }
 
 .footer__column {
-
+	display: flex;
+	flex-direction: column;
 }
 
 .footer__column_content_copyright {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  flex-basis: 711px;
+	flex-basis: 711px;
+	align-items: flex-start;
+	justify-content: space-between;
 }
 
 .logo_place_footer {
-  height: 35px;
+	height: 35px;
+
+	background-image: url(../images/logo_place_footer.svg);
 }
 
 .footer__author {
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  color: white;
-  margin: 18px 0;
+	margin: 18px 0;
+
+	color: white;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 25px;
 }
 
 .footer__column_content_info {
-
 }
 
 .footer__column-heading {
-  margin: 0 0 20px 0;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: bold;
-  color: white;
+	margin: 0 0 20px;
+
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 30px;
 }
 
 .footer__column-links {
-  list-style-type: none;
-  margin: 0 0 16px 0;
-  padding: 0;
+	margin: 0 0 16px;
+	padding: 0;
+
+	list-style-type: none;
 }
 
-.footer__column-link{
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  color: white;
-  text-decoration: none;
+.footer__column-link {
+	display: flex;
+	align-items: center;
+
+	color: white;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 30px;
+	text-decoration: none;
 }
 
 .footer__column_content_social {
-
 }
 
 .footer__social-icon {
-  height: 16px;
-  width: 16px;
-  margin-right: 10px;
+	width: 16px;
+	height: 16px;
+	margin-right: 10px;
 }
