--- a/styles/style.css
+++ b/styles/style.css
@@ -70,12 +70,12 @@
 }
 
 .header__main-illustration {
-	/* width: 765px; */
 	position: absolute;
 	right: 0;
 	bottom: 0;
 	z-index: 1;
 
+  width: 765px;
 	height: 608px;
 	object-fit: cover;
 }
@@ -143,10 +143,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-}
-
-.digits_space_top-bottom {
-	margin: 100px 0;
+  margin: 100px 0;
 }
 
 .section-title {
@@ -258,10 +255,7 @@
 	overflow: hidden;
 
 	background-color: #1f1f1f;
-}
-
-.kaufman_space_top-bottom {
-	padding: 90px 0;
+  padding: 90px 0;
 }
 
 .section-title_theme_dark {
