HTML и CSS блока resources, added animation

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -8,4 +8,6 @@
 
 	background-image: url(../../../images/kaufman-triangle.svg);
 	background-size: contain;
+
+  animation: rotation 20s linear infinite;
 }
