--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,3 +6,8 @@
   text-decoration: none;
   align-self: self-start;
 }
+
+.khan__buy-link:hover {
+  opacity: .3;
+  transition: opacity .4s ease;
+}
