--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,7 +1,7 @@
 .feynman {
 	position: relative;
 
-	height: 890px;
+	min-height: 890px;
 
 	background-color: #f2f2f2;
 	background-image: url(../../images/feynman.png);
